responsive-news-site/webroot/css/footer.css
.footer__link {
  background-color: lightgrey;
  padding-block-start: 2rem;
  margin-block-start: -1rem;
  padding-block-end: 2rem;
}

.footer{
  visibility: hidden;
}

.link {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: stretch;
  padding-inline-end: 5rem;
  margin-block-start: -11rem;
}

.link__container {
  list-style: none;
}

.link__list_items {
  margin-block-end: 2rem;
}

.list_items__link {
  text-decoration: none;
  text-transform: uppercase;
  color: #fff;
  font-size: 11px;
  font-weight: 700;
  opacity: 0.5;
}

@media (min-width: 768px) {
  .navigation__footer {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: flex-start;
    padding-block-start: 8rem;
  }
  .footer__container {
    margin-block-start: -10rem;
    margin-inline-start: 15rem;
    margin-inline-end: -4rem;
  }
  .link__list_items {
    margin-block-end: 1rem;
  }

  .footer {
    visibility: visible;
    align-self: flex-start;
  }
  .footer__header {
    font-size: 13px;
    font-weight: 700;
    color: #fff;
    text-transform: uppercase;
    margin-inline-start: 5rem;
  }
}

